--- a/LESS/global.less
+++ b/LESS/global.less
@@ -21,11 +21,8 @@ img {
     max-width: 95%;
     // width: 90%;
     height: auto;
-    // .test-border;
+    .test-border;
 }
 a {
     text-decoration: none;
-    &:hover {
-        transform: scale(1.15);
-    }
 }
