--- a/LESS/variables.less
+++ b/LESS/variables.less
@@ -1,7 +1,11 @@
 @primary: #000080;
 @secondary: #CDCDCD;
-@white: #FFF;
-@black: #000;
+@light: #FFF;
+@dark: #000;
 
 @desktop: ~"(min-width: 801px)"; 
 @tablet: ~"(min-width: 600px) and (max-width: 800px)"; 
+
+@font1: 'Cabin', sans-serif;
+@font2: 'Catamaran', sans-serif;
+@font3: 'Lora', serif;
